--- a/data.yaml
+++ b/data.yaml
@@ -4086,7 +4086,10 @@ library:
       value: 202110
     - since: C++23
       depends: __cpp_lib_concepts
-      value: 202211
+      value: 202302
+    - since: C++26
+      depends: __cpp_lib_concepts
+      value: 202406
     msvc:
     - since: C++20
       value: 202110
