[automated] Update data.yaml from libstdc++ data

--- a/data.yaml
+++ b/data.yaml
@@ -3519,7 +3519,7 @@ library:
   support:
     clang:
     - since: C++26
-      depends: '__has_builtin(__builtin_is_virtual_base_of)'
+      depends: __has_builtin(__builtin_is_virtual_base_of)
       value: 202406
     gcc: null
     msvc: null
