--- a/data.yaml
+++ b/data.yaml
@@ -3546,8 +3546,7 @@ library:
   support:
     clang:
     - since: C++20
-      depends: '!defined(_LIBCPP_HAS_NO_THREADS) && !defined(_LIBCPP_HAS_NO_EXPERIMENTAL_STOP_TOKEN)
-        && _LIBCPP_AVAILABILITY_HAS_SYNC'
+      depends: '!defined(_LIBCPP_HAS_NO_THREADS) && _LIBCPP_AVAILABILITY_HAS_SYNC'
       value: 201911
     gcc:
     - since: C++20
