GCC no longer defines __cpp_concepts before C++17

--- a/data.yaml
+++ b/data.yaml
@@ -299,7 +299,8 @@ language:
     - since: C++20
       value: 202002
     gcc:
-    - option: -fconcepts
+    - since: C++17
+      option: -fconcepts
       value: 202002
     - since: C++20
       value: 202002
