--- a/data.yaml
+++ b/data.yaml
@@ -4943,6 +4943,8 @@ library:
     gcc:
     - since: C++17
       value: 201803
+    - since: C++26
+      value: 202403
     msvc:
     - since: C++17
       value: 201803
