--- a/data.yaml
+++ b/data.yaml
@@ -897,7 +897,9 @@ language:
     gcc:
     - since: C++23
       value: 202211
-    msvc: null
+    msvc:
+    - since: C++23
+      value: 202110
 - name: __cpp_named_character_escapes
   rows:
   - value: 202207
