--- a/data.yaml
+++ b/data.yaml
@@ -3796,7 +3796,10 @@ library:
     clang:
     - since: C++23
       value: 202207
-    gcc: null
+    gcc:
+    - since: C++20
+      depends: __cpp_modules
+      value: 202207
     msvc:
     - since: C++20
       depends: '!defined(__clang__) && !defined(__EDG__)'
