--- a/data.yaml
+++ b/data.yaml
@@ -1013,7 +1013,9 @@ language:
   support:
     clang:
     - value: 202311
-    gcc: null
+    gcc:
+    - since: C++26
+      value: 202311
     msvc: null
 - name: __cpp_placeholder_variables
   rows:
