--- a/data.yaml
+++ b/data.yaml
@@ -1220,7 +1220,9 @@ language:
     gcc:
     - since: C++23
       value: 202207
-    msvc: null
+    msvc:
+    - since: C++23
+      value: 202207
 - name: __cpp_structured_bindings
   rows:
   - value: 201606
