--- a/data.yaml
+++ b/data.yaml
@@ -4281,6 +4281,7 @@ library:
     clang: null
     gcc:
     - since: C++26
+      depends: __cpp_pack_indexing
       value: 202403
     msvc: null
 - name: __cpp_lib_ranges_contains
