--- a/data.yaml
+++ b/data.yaml
@@ -2133,6 +2133,8 @@ library:
     gcc:
     - since: C++20
       value: 201806
+    - since: C++26
+      value: 202306
     msvc:
     - since: C++20
       value: 201806
