Revert "[automated] Update data.yaml from libstdc++ data"
This reverts commit 9915a2ecb42e3f9b3ad4ab3b8d06a8dee297cd1d.

--- a/data.yaml
+++ b/data.yaml
@@ -2757,9 +2757,7 @@ library:
     clang:
     - since: C++23
       value: 202207
-    gcc:
-    - since: C++23
-      value: 1
+    gcc: null
     msvc:
     - since: C++23
       value: 202207
